# libsbml

./: CMakeLists.txt  README.md
examples/c/: FormulaGraphvizFormatter.h  addCVTerms.c  addModelHistory.c  addingEvidenceCodes_1.c  addingEvidenceCodes_2.c  appendAnnotation.c  convertSBML.c  createExampleSBML.c  drawMath.c  echoSBML.c  evaluateMath.c  printAnnotation.c  printMath.c  printNotes.c  printRegisteredPackages.c  printSBML.c  printSupported.c  printUnits.c  promoteParameters.c  readSBML.c  stripPackage.c  translateL3Math.c  translateMath.c  unsetAnnotation.c  unsetNotes.c  validateSBML.c
examples/c++/: addCVTerms.cpp  addCustomValidator.cpp  addModelHistory.cpp  addingEvidenceCodes_1.cpp  addingEvidenceCodes_2.cpp  appendAnnotation.cpp  callExternalValidator.cpp  convertReactions.cpp  convertSBML.cpp  convertToL1V1.cpp  createExampleSBML.cpp  echoSBML.cpp  getAllElementsWithNotes.cpp  inferUnits.cpp  inlineFunctionDefintions.cpp  printAnnotation.cpp  printMath.cpp  printNotes.cpp  printRegisteredPackages.cpp  printSBML.cpp  printSupported.cpp  printUnits.cpp  promoteParameters.cpp  readSBML.cpp  renameSId.cpp  rngvalidator.cpp  setIdFromNames.cpp  setNamesFromIds.cpp  stripPackage.cpp  translateL3Math.cpp  translateMath.cpp  unsetAnnotation.cpp  unsetNotes.cpp  util.c  util.h  validateSBML.cpp
examples/c++/arrays/: arrays_example1.cpp  arrays_example2.cpp  arrays_example3.cpp
examples/c++/comp/: SBMLHttpResolverExample.cpp  flattenModel.cpp  flattenModelAdvanced.cpp  spec_example1.cpp  spec_example2.cpp  spec_example3.cpp  spec_example4.cpp
examples/c++/distrib/: createTestSuiteModels.cpp  distrib_example1.cpp
examples/c++/dyn/: dyn_example1.cpp  dyn_example2.cpp
examples/c++/fbc/: convertCobraToFbc.cpp  convertFbcToCobra.cpp  convertFbcV1ToV2.cpp  convertFbcV2ToV1.cpp  (+1 more)
src/: CMakeLists.txt
src/bindings/javascript/: local.cpp
src/bindings/matlab/: OutputSBML.cpp  TranslateSBML.cpp
src/bindings/perl/: local.cpp
src/bindings/php/: local.cpp
src/bindings/python/: local.cpp
src/bindings/r/: local.cpp
src/bindings/ruby/: local.cpp
src/bindings/swig/: ListWrapper.h  OStream.h  arrays-package.h  comp-package.h  distrib-package.h  dyn-package.h  fbc-package.h  groups-package.h  l3v2extendedmath-package.h  layout-package.h  libsbml.h  multi-package.h  qual-package.h  render-package.h  req-package.h  spatial-package.h
src/liblx/: CMakeLists.txt
src/liblx/test/: TestAlgebraicRule.c  TestAncestor.cpp  TestAssignmentRule.c  TestAttributeFunctions.cpp  TestCompartment.c  TestCompartmentType.c  TestCompartmentType_newSetters.c  TestCompartmentVolumeRule.c  TestCompartment_newSetters.c  TestConsistencyChecks.cpp  TestConstraint.c  TestConstraint_newSetters.c  TestCopyAndClone.cpp  TestDelay.c  TestEvent.c  TestEventAssignment.c  TestEventAssignment_newSetters.c  TestEvent_newSetters.c  TestFunctionDefinition.c  TestFunctionDefinition_newSetters.c  TestGetMultipleObjects.cpp  TestInitialAssignment.c  TestInitialAssignment_newSetters.c  TestInternalConsistencyChecks.cpp  TestKineticLaw.c  TestKineticLaw_newSetters.c  TestL3Compartment.c  TestL3Event.c  TestL3KineticLaw.c  TestL3LocalParameter.c  TestL3Model.c  TestL3Parameter.c  TestL3Reaction.c  TestL3Species.c  TestL3SpeciesReference.c  TestL3Trigger.c  TestL3Unit.c  TestLevelCompatibility.cpp  TestListOf.c  TestModel.c  (+64 more)
src/liblx/xml/: ExpatAttributes.cpp  ExpatAttributes.h  ExpatHandler.cpp  ExpatHandler.h  ExpatParser.cpp  ExpatParser.h  LibLXError.h  LibXMLAttributes.cpp  LibXMLAttributes.h  LibXMLHandler.cpp  LibXMLHandler.h  LibXMLNamespaces.cpp  LibXMLNamespaces.h  LibXMLParser.cpp  LibXMLParser.h  LibXMLTranscode.cpp  LibXMLTranscode.h  SBXMLError.h  XMLAttributes.cpp  XMLAttributes.h  XMLBuffer.cpp  XMLBuffer.h  XMLConstructorException.cpp  XMLConstructorException.h  XMLError.cpp  XMLError.h  XMLErrorLog.cpp  XMLErrorLog.h  XMLExtern.h  XMLFileBuffer.cpp  XMLFileBuffer.h  XMLHandler.cpp  XMLHandler.h  XMLInputStream.cpp  XMLInputStream.h  XMLLogOverride.cpp  XMLLogOverride.h  XMLMemoryBuffer.cpp  XMLMemoryBuffer.h  XMLNamespaces.cpp  (+27 more)
src/liblx/xml/common/: common.h  extern.h  liblx-config.h  liblx-namespace.h  liblx-version.cpp  liblx-version.h  liblxfwd.h  libsbxml-config.h  libsbxml-version.cpp  libsbxml-version.h  sbxmlfwd.h
src/liblx/xml/compress/: CompressCommon.cpp  CompressCommon.h  InputDecompressor.cpp  InputDecompressor.h  OutputCompressor.cpp  OutputCompressor.h
src/liblx/xml/test/: TestCopyAndClone.cpp  TestRunner.c  TestXMLAttributes.cpp  TestXMLAttributesC.c  TestXMLError.cpp  TestXMLErrorC.c  TestXMLErrorLog.c  TestXMLExceptions.cpp  TestXMLInputStream.c  TestXMLNamespaces.c  TestXMLNode.cpp  TestXMLNode_newSetters.c  TestXMLOutputStream.c  TestXMLToken.c  TestXMLToken_newSetters.c  TestXMLTriple.c
src/sbml/: CMakeLists.txt  SBMLError.h
src/sbml/common/: common.h  common.rem.h
src/sbml/compress/: CompressCommon.h
src/sbml/xml/: ExpatHandler.cpp  ExpatParser.cpp  LibXMLAttributes.cpp  LibXMLNamespaces.cpp  LibXMLParser.cpp  LibXMLTranscode.cpp  SBMLNamespaces.cpp  SBMLNamespaces.h  SBXMLError.h  XMLAttributes.cpp  XMLAttributes.h  XMLBuffer.h  XMLConstructorException.cpp  XMLConstructorException.h  XMLError.cpp  XMLError.h  XMLErrorLog.cpp  XMLErrorLog.h  XMLExtern.h  XMLFileBuffer.cpp  XMLHandler.cpp  XMLHandler.h  XMLInputStream.cpp  XMLInputStream.h  XMLLogOverride.cpp  XMLLogOverride.h  XMLMemoryBuffer.cpp  XMLMemoryBuffer.h  XMLNamespaces.cpp  XMLNamespaces.h  XMLNode.cpp  XMLNode.h  XMLOutputStream.cpp  XMLOutputStream.h  XMLParser.cpp  XMLParser.h  XMLToken.cpp  XMLToken.h  XMLTokenizer.h  XMLTriple.cpp  (+6 more)
src/sbml/xml/common/: common.h  extern.h  libsbxml-config-common.h.cmake  libsbxml-config.h  libsbxml-namespace.h  libsbxml-version.cpp  libsbxml-version.h  sbxmlfwd.h
src/sbml/xml/compress/: CompressCommon.cpp  OutputCompressor.h
src/sbml/xml/test/: TestCopyAndClone.cpp  TestXMLAttributesC.c  TestXMLError.cpp  TestXMLErrorLog.c  TestXMLNamespaces.c  TestXMLNode.cpp  TestXMLNode_newSetters.c  TestXMLToken.c  TestXMLToken_newSetters.c  TestXMLTriple.c
(+25 files in other folders)
